<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher__background"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="70dp"
        android:text="Calculadora"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCapacidadeBateria"
        android:layout_width="297dp"
        android:layout_height="43dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="255dp"
        android:ems="10"
        android:hint="@string/main_hint_capacidade_bateria"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCargaAtualBateria"
        android:layout_width="296dp"
        android:layout_height="46dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="332dp"
        android:ems="10"
        android:hint="@string/main_hint_carga_atual_bateria"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCorrenteCarregamento"
        android:layout_width="295dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="417dp"
        android:ems="10"
        android:hint="@string/main_hint_corrente_carregamento"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTensaoEntrada"
        android:layout_width="295dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="497dp"
        android:ems="10"
        android:hint="@string/main_hint_tensao_entrada"
        android:inputType="number|numberDecimal"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="297dp"
        android:layout_height="45dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="646dp"
        android:backgroundTint="@color/primary"
        android:text="@string/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>