<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/textViewBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="88dp"
        android:fontFamily="sans-serif"
        android:text="Bem vindo"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="438dp"
        android:ems="10"
        android:hint="@string/login_hint_password"
        android:inputType="text|textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="368dp"
        android:ems="10"
        android:hint="@string/login_hint_user"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="189dp"
        android:layout_height="168dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="156dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar"/>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="281dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="604dp"
        android:backgroundTint="@color/primary"
        android:text="@string/btn_login"
        android:textColorLink="@color/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="218dp"
        android:layout_marginTop="485dp"
        android:backgroundTint="#E2E2E2"
        android:text="@string/login_hint_forgot_password"
        android:textAllCaps="false"
        android:textColor="#A0A0A0"
        android:textColorLink="#DBDBDB"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>